--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -121,6 +121,7 @@ of EntitySpec:
         ; Retrieve James' attr-val pairs as a map. An entity can be referenced by either EID or LookupRef
         james-map   (td/entity-map (live-db) james-eid)                       ; use EID  
         james-map2  (td/entity-map (live-db) [:person/name "James Bond"] )    ; use LookupRef
+                   ; td/entity-map returns a map of attr-vals given an EntitySpec
   ]
     (is (= james-map {:person/name "James Bond" :location "London" :weapon/type #{:weapon/wit :weapon/gun} } ))
     (is (= james-map james-map2 ))
@@ -313,7 +314,7 @@ value instead of a set of tuples of scalars:
 
 === Using the Datomic Pull API
 
-If one wishes to use queries returning possibly duplicate result items, then the Datomic Pull api is
+If one wishes to use queries returning possibly duplicate result items, then the Datomic Pull API is
 required.  A Pull query returns results in a List (a Clojure vector), rather than a Set, so that
 duplicate result items are not discarded.  As an example, let's find the location of all of our
 entities:
@@ -335,11 +336,12 @@ entities:
 
 == Using Datomic Partitions
 
-Datomic allows the user to create `partitions` within the DB.  Datomic partitions serve solely as 
-a structural optimization, and do not control or limit how or by whom datoms may be accessed.  The
-effect of a partition in Datomic is to effectively "pre-sort" all entities in that partition so that
-they are adjacent in storage, which _may_ improve access times for related entities that are often
-accessed together.
+Datomic allows the user to create `partitions` within the DB.  Datomic
+partitions serve solely as a structural optimization, and do not control or
+limit how or by whom datoms may be accessed.  The effect of a partition in
+Datomic is to effectively "pre-group" all entities in that partition so that
+they are adjacent in storage, which _may_ (or may not) improve access times for
+related entities that are often accessed together.
 
 In Tupelo Datomic, we may easily create and use partitions:
 
@@ -368,6 +370,7 @@ given partition by using the `(td/partition-eids ...)` function:
     ; Show that only Honey is in the people partition
     (let [people-eids           (td/partition-eids (live-db) :people)
           people-entity-maps    (map #(td/entity-map (live-db) %) people-eids) ]
+                                     ; td/entity-map returns a map of attr-vals given an EntitySpec
       (is (= people-entity-maps [
                {:person/name "Honey Rider", :weapon/type #{:weapon/knife}, 
                 :location "Caribbean"} ] )))
